# rambo

./: .gitignore  .gitlab-ci.yml  Cargo.toml  TODO  behch.sh  bench.sh  cfg.dot  perf.sh  runme.sh  rustfmt.toml  ssa.txt  zzz.rambo
git-hooks/: pre-commit
riscv/: Cargo.toml
riscv/src/: decoder.rs  instructions.rs  lib.rs  registers.rs
riscv_emulator/: Cargo.toml
riscv_emulator/src/: cpu.rs  lib.rs  memory.rs  mmu.rs  tests.rs
risky/: Cargo.toml  LICENSE  README.md
risky/src/: lib.rs
src/: cfg.rs  codegen.rs  constants.rs  control_flow.rs  dataflow.rs  dead_bindings.rs  env.rs  eval.rs  frontend.rs  graphviz.rs  ir.rs  lexer.rs  main.rs  parser.rs  pipeline.rs  redundant_bindings.rs  reduntant_bindings.rs  riscv.rs  riscv_backend.rs  riscv_decoder.rs  riscv_runner.rs  runtime.rs  semantics.rs  slab.rs  source.rs  ssa_eval.rs  stable_graph.rs  stable_vec.rs  test_config.rs  tracking_allocator.rs  typed_visitor.rs  unique_rc.rs  utils.rs  vm.rs
src/codegen/: mod.rs  tests.rs
src/control_flow/: mod.rs  tests.rs
src/frontend/: dead_code.rs  mod.rs  tests.rs
src/ir/: eval.rs  gvn.rs  idgen.rs  mod.rs  value_storage.rs
src/new_riscv_sim/: cpu.rs  memory.rs  mmu.rs  mod.rs  tests.rs
src/riscv_backend/: mod.rs  tests.rs
src/riscv_base/: decoder.rs  mod.rs
src/riscv_exe/: emulator.rs  executable.rs  mod.rs  simulator.rs
src/riscv_simulator/: mod.rs  tests.rs
src/ssa/: generator.rs  mod.rs
src/ssa_eval/: mod.rs  tests.rs
test-data/: main.rambo  str.rambo  x.rambo  y.rambo  z.rambo
