[[bin]]
name = "rambo"

[package]
name = "rambo"
version = "0.3.7"
description = "Compiler for a toy programming language Rambo, written in Rust just for fun, i.e. with no practical purpose in mind."
edition = "2021"
authors = ["Artem Borisovsky <bytefu@gmail.com>"]

[dependencies]
riscv = { path = "riscv" }
riscv_emulator = { path = "riscv_emulator" }
getopts = "0.2.21"
itertools = "0.10.1"
termcolor = "1.1.2"
libc = "0.2.107"
elapsed = "0.1.2"
number_prefix = "0.4.0"
bitflags = "1.3.2"
smallvec = "1.7.0"
bimap = "0.6.1"
byteorder = "1.4.3"
risky = "0.3.0"
bytes = "1.1.0"
bincode = { version = "2.0.0-alpha.1", features = ["std", "derive"] }
rustc-hash = "1.1.0"
fnv = "1.0.7"
iset = "0.1.1"

[profile.release]
debug = true
