[[bin]]
name = "rambo"

[package]
name = "rambo"
version = "0.3.7"
description = "Compiler for a toy programming language Rambo, written in Rust just for fun, i.e. with no practical purpose in mind."
edition = "2021"
authors = ["Artem Borisovsky <bytefu@gmail.com>"]

[dependencies]
# git = "https://github.com/burjui/risky"
risky = { git = "file:///home/burjui/Devel/risky", rev = "9a0c81f0a562425fe5b80500be474c6ea7346ccb", features = [
    "nightly",
] }
riscv_emulator = { path = "riscv_emulator" }
getopts = "0.2.21"
itertools = "0.10.5"
termcolor = "1.1.3"
libc = "0.2.137"
elapsed = "0.1.2"
number_prefix = "0.4.0"
bitflags = "1.3.2"
smallvec = "1.10.0"
bimap = "0.6.2"
byteorder = "1.4.3"
bytes = "1.3.0"
bincode = { version = "2.0.0-rc.2", features = ["std", "derive"] }
rustc-hash = "1.1.0"
fnv = "1.0.7"
iset = "0.1.1"

[profile.release]
debug = true
