[package]
name = "riscv_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
iset = "0.1.1"
byteorder = "1.4.3"
# risky = { git = "https://github.com/burjui/risky", rev = "d3da81e8df0cdcfcf18e689e17cff3fa2bc7c445" }
risky = { risky = { path = "/home/burjui/Devel/risky" } }
