[package]
name = "riscv_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
iset = "0.1.1"
byteorder = "1.4.3"
rustc-hash = "1.1.0"
# risky = { git = "https://github.com/burjui/risky", rev = "______" }
risky = { git = "file:///home/burjui/Devel/risky", rev = "01fa1014eb057760e4fd26aaf15f3022281e8a48" }
